refactor: extraer god-classes y fachadas en la campana de codigo limpio
Parte servicios Java (Olas A-D) y componentes/pages frontend en hooks y colaboradores, sin cambiar contratos HTTP ni el orden de side effects en zonas congeladas. Incluye el bundle de pnpm build para static/.

Co-authored-by: Cursor <cursoragent@cursor.com>